# synapse

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: main.py  schemas.py
api/routes/: health.py  memory.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
dashboard/src/: App.jsx  index.css
dashboard/src/api/: client.js
dashboard/src/components/: MemoryCard.jsx  MemoryGraph.jsx  SearchBar.jsx  StatsPanel.jsx  Timeline.jsx
demo/: chat.html
examples/: basic_usage.py  with_claude.py  with_ollama.py
synapse/: __init__.py  decay.py  embeddings.py  engine.py  importance.py  store.py  types.py
tests/: test_engine.py  test_store.py
