[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-memory"
version = "0.1.0"
description = "Persistent self-organizing memory for any AI model"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "MikeDaGuyForStuff"},
]
keywords = ["ai", "memory", "llm", "agents", "rag", "local-ai", "open-source"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.2.0"]
dashboard = []  # install dashboard dependencies manually: cd dashboard && npm install
all = ["sentence-transformers>=2.2.0"]

[tool.setuptools.packages.find]
include = ["synapse*"]